# gameoflife

src/: GameOfLife.sln
src/GameOfLife/: App.xaml.cs  AppShell.xaml.cs  BoolCell.cs  BoolMatrixViewModel.cs  BoolToColorConverter.cs  GameOfLife.csproj  MainPage.xaml  MainPage.xaml.cs  MauiProgram.cs  SquareBehavior.cs
src/GameOfLife.Engine/: CMakeLists.txt  CMakePresets.json  build.bat
src/GameOfLife.Engine/src/: gameoflife_capi.cpp  gameoflife_capi.h  platform_bgfx.cpp  platform_bgfx.h  renderer.cpp  renderer.h
src/GameOfLife/Interop/: GameOfLifeNative.cs
src/GameOfLife/Views/: GameOfLifeView.cs
